# JobSuche-Py

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  categories.example.yaml  disable_job.py  main.py  prompts.example.yaml  pyproject.toml  pytest.ini  reclassify.sh  reclassify_cv.sh  reclassify_matching.sh  reclassify_perfect_job.sh  setup_key.sh
config/: api_config.yaml  llm_config.yaml  paths_config.yaml  processing_config.yaml  scraper_config.yaml  search_config.yaml
docs/: DEVELOPMENT.md  WORKFLOWS.md
src/: __init__.py  analyzer.py  api_client.py  classifier.py  exceptions.py  exporters.py  html_styles.py  html_templates.py  html_utils.py  http_client.py  logging_config.py  scraper.py  session.py  session_merger.py  thinking_html_exporter.py
src/config/: __init__.py  loader.py
src/data/: __init__.py  gatherer.py  job_database.py
src/llm/: __init__.py  openrouter_client.py  processor.py
src/preferences/: __init__.py  user_profile.py
src/prompts/: __init__.py  templates.py
src/workflows/: __init__.py  base.py  brainstorm.py  cv_based.py  matching.py  multi_category.py  perfect_job.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_api_client.py  test_classifier.py  test_classifier_batch.py  test_classifier_single.py  test_config.py  test_critical_errors.py  test_exceptions.py  test_fetch_detailed_listings.py  test_gatherer.py  test_helpers.py  test_http_client.py  test_integration.py  test_integration_real_network.py  test_main_cli.py  test_resume_functionality.py  test_scraper.py  test_session.py  test_user_profile.py  test_workflows.py
tests/fixtures/: arbeitsagentur_page.html  external_page_with_json_ld.html  external_page_with_main.html  js_required_page.html  large_batch_jobs.json
tools/: diagnose_openrouter.py
